--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,14 @@ dependencies {
 
     // JSON Implementation (GlassFish)
     implementation 'org.glassfish:javax.json:1.1.4'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+}
+
+test {
+    useJUnitPlatform()
 }
